k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chat-app
      labels: 
        app: backend
    spec:
      containers:
      - name: chatapp-backend
        image: ajaymall/chatapp-backend:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "300m"      
            memory: "512Mi" 
          limits:
            cpu: "800m"
            memory: "1Gi"
