k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels: 
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: ajaymall/chatapp-frontend
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"     
            memory: "256Mi" 
          limits:
            cpu: "500m"      
            memory: "512Mi"
